--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   firebase_auth: ^3.2.0
   cloud_firestore: ^3.1.0
   firebase_core:
+  http: ^0.13.4
+  provider: ^6.0.1
+  crypto: ^3.0.1
+  card_swiper: ^1.0.4
 
 dev_dependencies:
   flutter_test:
